--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,15 +76,15 @@ body.appear {
   box-sizing: inherit;
 }
 
-.container {
-  width: 96%;
-  padding-right: 2%;
-  padding-left: 2%;
-  margin-right: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-left: auto;
-}
+/*.container {*/
+/*  width: 96%;*/
+/*  padding-right: 2%;*/
+/*  padding-left: 2%;*/
+/*  margin-right: auto;*/
+/*  margin-left: auto;*/
+/*  margin-right: auto;*/
+/*  margin-left: auto;*/
+/*}*/
 
 .row>* {
   width: auto;
@@ -121,59 +121,76 @@ header .container {
   }
 }
 
+/* todo: import bootstrap used classes in a more fashioned way */
 @media (min-width:1200px) {
   .container {
     max-width: 1140px;
   }
 }
 
-.row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
+/*.row {*/
+/*  display: -ms-flexbox;*/
+/*  display: flex;*/
+/*  -ms-flex-wrap: wrap;*/
+/*  flex-wrap: wrap;*/
+/*  margin-right: -15px;*/
+/*  margin-left: -15px;*/
+/*}*/
 
-.col-12,
-.col-lg-3,
-.col-sm-4 {
-  position: relative;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-}
+/*.col-12,*/
+/*.col-lg-3,*/
+/*.col-sm-4 {*/
+/*  position: relative;*/
+/*  width: 100%;*/
+/*  padding-right: 15px;*/
+/*  padding-left: 15px;*/
+/*}*/
 
-.col-12 {
-  -ms-flex: 0 0 100%;
-  flex: 0 0 100%;
-  max-width: 100%;
-}
+/*.col-12 {*/
+/*  -ms-flex: 0 0 100%;*/
+/*  flex: 0 0 100%;*/
+/*  max-width: 100%;*/
+/*}*/
 
-@media (min-width:992px) {
-  .col-lg-3 {
-    -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-}
+/*@media (min-width:992px) {*/
+/*  .col-lg-3 {*/
+/*    -ms-flex: 0 0 25%;*/
+/*    flex: 0 0 25%;*/
+/*    max-width: 25%;*/
+/*  }*/
+/*}*/
 
-@media (min-width:576px) {
-  .col-sm-4 {
-    -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-  }
-}
+/*@media (min-width:576px) {*/
+/*  .col-sm-4 {*/
+/*    -ms-flex: 0 0 33.333333%;*/
+/*    flex: 0 0 33.333333%;*/
+/*    max-width: 33.333333%;*/
+/*  }*/
+/*}*/
 
-@media (max-width:576px) {
-  .container {
-    width: 94%;
-    padding-right: 3%;
-    padding-left: 3%;
-  }
-}
+/*@media (max-width:576px) {*/
+/*  .container {*/
+/*    width: 94%;*/
+/*    padding-right: 3%;*/
+/*    padding-left: 3%;*/
+/*  }*/
+/*}*/
+
+/*@media (min-width: 768px) {*/
+/*  .col-md-10 {*/
+/*    -ms-flex: 0 0 83.333333%;*/
+/*    flex: 0 0 83.333333%;*/
+/*    max-width: 83.333333%;*/
+/*  }*/
+/*}*/
+
+/*@media (min-width: 992px) {*/
+/*  .col-lg-9 {*/
+/*    -ms-flex: 0 0 75%;*/
+/*    flex: 0 0 75%;*/
+/*    max-width: 75%;*/
+/*  }*/
+/*}*/
 
 body [data-mobile-detector] {
   display: block;
